TEST : 도메인 단위테스트 코드 추가